--- a/app/src/main/res/layout/item_event.xml
+++ b/app/src/main/res/layout/item_event.xml
@@ -4,9 +4,8 @@
     android:layout_height="225dp"
     android:layout_gravity="top"
     android:paddingBottom="2dp"
-    android:background="@android:color/black"
+    android:background="@android:color/white"
     >
-
 
     <ImageView
         android:id="@+id/ivImage"
@@ -24,11 +23,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/event_name_label"
-        android:textColor="@color/white"
+        android:textColor="@color/brown"
         android:textStyle="bold"
-        android:textSize="24sp"
+        android:textSize="20sp"
         android:layout_alignParentTop="true"
-        android:background="@color/brown"
+        android:background="@color/white"
+        android:maxLines="1"
         android:padding="10dp"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
@@ -40,7 +40,7 @@
         android:gravity="center_vertical"
         android:layout_alignParentLeft="true"
         android:layout_alignParentBottom="true"
-        android:background="@color/pink"
+        android:background="@color/teal"
         >
 
         <TextView
@@ -51,7 +51,7 @@
             android:text="SUNDAY"
             android:textSize="36sp"
             android:textColor="@color/badgeText"
-            android:background="@color/teal"
+            android:background="@color/pink"
             android:layout_centerHorizontal="true"
             />
 
@@ -66,7 +66,7 @@
         android:gravity="center_vertical"
         android:layout_below="@+id/tvEventName"
         android:layout_above="@+id/rlDay"
-        android:background="@color/pink"
+        android:background="@color/teal"
         >
 
         <TextView
