--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -11,5 +11,9 @@
         <item name="android:actionModeBackground">@drawable/cab_background_top_ctactionbar</item>
         <item name="android:actionModeSplitBackground">@drawable/cab_background_bottom_ctactionbar</item>
         <item name="android:actionModeCloseButtonStyle">@style/ActionButton.CloseMode.Ctactionbar</item>
-        <item name="android:actionBarWidgetTheme">@style/Theme.Ctactionbar.Widget</item>    </style>
+        <item name="android:actionBarWidgetTheme">@style/Theme.Ctactionbar.Widget</item>
+
+        <item name="android:textColor">@color/brown</item>
+
+    </style>
 </resources>
