--- a/app/src/main/res/layout/activity_event_detail.xml
+++ b/app/src/main/res/layout/activity_event_detail.xml
@@ -14,7 +14,8 @@
         android:textSize="20sp"
         android:layout_alignParentTop="true"
         android:background="@color/white"
-        android:padding="10dp"
+        android:paddingTop="20dp"
+        android:paddingBottom="20dp"
         android:maxLines="1"
         android:gravity="center_horizontal"
         />
