--- a/app/src/main/res/layout/activity_event_detail.xml
+++ b/app/src/main/res/layout/activity_event_detail.xml
@@ -74,7 +74,7 @@
             android:layout_alignParentLeft="true"
             android:gravity="center_vertical"
             android:layout_below="@+id/rlBadge"
-            android:background="@color/pink"
+            android:background="@drawable/gradient_pink"
             >
 
             <TextView
@@ -110,7 +110,7 @@
             android:text=""
             android:textSize="@dimen/badge_item_text_size"
             android:textColor="@color/badgeText"
-            android:background="@color/brown"
+            android:background="@drawable/gradient_brown"
             android:layout_below="@+id/rlBadgeLower"
             android:layout_alignParentLeft="true"
             android:onClick="onClickRSVP"
@@ -125,7 +125,7 @@
             android:text="GET THERE"
             android:textSize="@dimen/badge_item_text_size"
             android:textColor="@color/badgeText"
-            android:background="@color/teal"
+            android:background="@drawable/gradient_teal"
             android:layout_below="@+id/tvRSVP"
             android:layout_alignParentLeft="true"
             android:onClick="onClickGetThere"
@@ -140,7 +140,7 @@
             android:text="CHAT"
             android:textSize="@dimen/badge_item_text_size"
             android:textColor="@color/badgeText"
-            android:background="@color/pink"
+            android:background="@drawable/gradient_pink"
             android:layout_below="@+id/tvGetThere"
             android:layout_alignParentLeft="true"
             android:onClick="onClickChat"
