--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <item name="brown" type="color">#736558</item>
+    <item name="brown_light" type="color">#ffb2a494</item>
     <item name="brown_transparent" type="color">#AA736558</item>
     <item name="pink" type="color">#F0659E</item>
     <item name="pink_light" type="color">#F383B2</item>
     <item name="pink_transparent" type="color">#99F0659E</item>
     <item name="teal" type="color">#4BBDC5</item>
+    <item name="teal_light" type="color">#ff4bdfe7</item>
     <item name="teal_transparent" type="color">#994BBDC5</item>
     <item name="white" type="color">#FFFFFF</item>
     <item name="white_transparent" type="color">#99FFFFFF</item>
