--- a/app/src/main/res/layout/item_event.xml
+++ b/app/src/main/res/layout/item_event.xml
@@ -27,7 +27,7 @@
         android:textStyle="bold"
         android:textSize="20sp"
         android:layout_alignParentTop="true"
-        android:background="@color/white"
+        android:background="@drawable/gradient_white"
         android:maxLines="1"
         android:paddingTop="15dp"
         android:paddingBottom="15dp"
