--- a/app/src/main/res/layout/activity_event_detail.xml
+++ b/app/src/main/res/layout/activity_event_detail.xml
@@ -110,7 +110,7 @@
             android:text=""
             android:textSize="@dimen/badge_item_text_size"
             android:textColor="@color/badgeText"
-            android:background="@drawable/gradient_brown"
+            android:background="@drawable/gradient_brown_rounded"
             android:layout_below="@+id/rlBadgeLower"
             android:layout_alignParentLeft="true"
             android:onClick="onClickRSVP"
@@ -125,7 +125,7 @@
             android:text="GET THERE"
             android:textSize="@dimen/badge_item_text_size"
             android:textColor="@color/badgeText"
-            android:background="@drawable/gradient_teal"
+            android:background="@drawable/gradient_teal_rounded"
             android:layout_below="@+id/tvRSVP"
             android:layout_alignParentLeft="true"
             android:onClick="onClickGetThere"
@@ -140,7 +140,7 @@
             android:text="CHAT"
             android:textSize="@dimen/badge_item_text_size"
             android:textColor="@color/badgeText"
-            android:background="@drawable/gradient_pink"
+            android:background="@drawable/gradient_pink_rounded"
             android:layout_below="@+id/tvGetThere"
             android:layout_alignParentLeft="true"
             android:onClick="onClickChat"
