--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,7 +7,6 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    android:visibility="gone"
     tools:context="org.chicktech.chicktech.activities.LoginActivity">
 
     <EditText
@@ -44,5 +43,17 @@
         android:layout_alignTop="@+id/btnSignOn"
         android:layout_toRightOf="@+id/btnSignOn"
         android:layout_toEndOf="@+id/btnSignOn" />
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageView"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:src="@drawable/chicktech_logo"
+        android:contentDescription="ChickTech" />
+
+
 
 </RelativeLayout>
