--- a/app/src/main/res/layout/activity_event_detail.xml
+++ b/app/src/main/res/layout/activity_event_detail.xml
@@ -5,331 +5,15 @@
     android:padding="0dp"
     tools:context="org.chicktech.chicktech.activities.EventDetailActivity">
 
-    <TextView
-        android:id="@+id/tvEventName"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/event_name_label"
-        android:textColor="@color/brown"
-        android:textSize="20sp"
+
+    <FrameLayout
+        android:id="@+id/flContent"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
         android:layout_alignParentTop="true"
-        android:background="@drawable/gradient_white"
-        android:paddingTop="20dp"
-        android:paddingBottom="20dp"
-        android:maxLines="1"
-        android:gravity="center_horizontal"
-        />
-
-
-    <LinearLayout
-        android:id="@+id/llMenu"
-        android:orientation="vertical"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/tvEventName"
-        android:visibility="invisible"
-        >
-
-        <RelativeLayout
-            android:id="@+id/rlBadge"
-            android:layout_width="@dimen/badge_width"
-            android:layout_height="130dp"
-            android:layout_alignParentLeft="true"
-            android:gravity="center_vertical"
-            android:layout_below="@+id/tvEventName"
-            android:background="@color/teal"
-            >
-
-            <TextView
-                android:id="@+id/tvDateNumber"
-                android:layout_alignParentTop="true"
-                android:layout_width="fill_parent"
-                android:gravity="center_horizontal"
-                android:layout_height="wrap_content"
-                android:text=""
-                android:textSize="72sp"
-                android:textColor="@color/badgeText"
-                android:paddingTop="10dp"
-                android:layout_centerHorizontal="true" />
-
-            <TextView
-                android:id="@+id/tvMonth"
-                android:layout_below="@+id/tvDateNumber"
-                android:layout_width="fill_parent"
-                android:gravity="center_horizontal"
-                android:layout_height="wrap_content"
-                android:text=""
-                android:textSize="36sp"
-                android:textColor="@color/badgeText"
-                android:paddingBottom="10dp"
-                android:layout_centerHorizontal="true"
-                />
-
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:id="@+id/rlBadgeLower"
-            android:layout_width="@dimen/badge_width"
-            android:layout_height="70dp"
-            android:layout_alignParentLeft="true"
-            android:gravity="center_vertical"
-            android:layout_below="@+id/rlBadge"
-            android:background="@drawable/gradient_pink"
-            >
-
-            <TextView
-                android:id="@+id/tvDay"
-                android:layout_width="@dimen/badge_width"
-                android:gravity="center_horizontal"
-                android:layout_height="wrap_content"
-                android:text=""
-                android:textSize="36sp"
-                android:textColor="@color/badgeText"
-                android:layout_centerHorizontal="true"
-                />
-
-            <TextView
-                android:id="@+id/tvTime"
-                android:layout_width="@dimen/badge_width"
-                android:gravity="center_horizontal"
-                android:layout_height="wrap_content"
-                android:text=""
-                android:textSize="18sp"
-                android:textColor="@color/badgeText"
-                android:layout_below="@+id/tvDay"
-                android:layout_centerHorizontal="true"
-                />
-
-        </RelativeLayout>
-
-        <TextView
-            android:id="@+id/tvRSVP"
-            android:layout_width="@dimen/badge_width"
-            android:gravity="center"
-            android:layout_height="@dimen/badge_item_height"
-            android:text=""
-            android:textSize="@dimen/badge_item_text_size"
-            android:textColor="@color/badgeText"
-            android:background="@drawable/gradient_brown_rounded"
-            android:layout_below="@+id/rlBadgeLower"
-            android:layout_alignParentLeft="true"
-            android:onClick="onClickRSVP"
-            android:clickable="true"
-            />
-
-        <TextView
-            android:id="@+id/tvGetThere"
-            android:layout_width="@dimen/badge_width"
-            android:gravity="center"
-            android:layout_height="@dimen/badge_item_height"
-            android:text="GET THERE"
-            android:textSize="@dimen/badge_item_text_size"
-            android:textColor="@color/badgeText"
-            android:background="@drawable/gradient_teal_rounded"
-            android:layout_below="@+id/tvRSVP"
-            android:layout_alignParentLeft="true"
-            android:onClick="onClickGetThere"
-            android:clickable="true"
-            />
-
-        <TextView
-            android:id="@+id/tvChat"
-            android:layout_width="@dimen/badge_width"
-            android:gravity="center"
-            android:layout_height="@dimen/badge_item_height"
-            android:text="CHAT"
-            android:textSize="@dimen/badge_item_text_size"
-            android:textColor="@color/badgeText"
-            android:background="@drawable/gradient_pink_rounded"
-            android:layout_below="@+id/tvGetThere"
-            android:layout_alignParentLeft="true"
-            android:onClick="onClickChat"
-            android:clickable="true"
-            />
-    </LinearLayout>
-
-
-    <ScrollView
-        android:id="@+id/svDetails"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/tvEventName"
         android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_toRightOf="@+id/llMenu"
-        android:visibility="invisible"
-        >
-
-        <RelativeLayout
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:id="@+id/rlDetails"
-            >
-
-            <ImageView
-                android:id="@+id/ivImage"
-                android:layout_width="fill_parent"
-                android:layout_height="200dp"
-                android:adjustViewBounds="false"
-                android:scaleType="centerCrop"
-                android:layout_alignParentTop="true"
-                android:alpha="1"
-                />
-
-            <LinearLayout
-                android:id="@+id/llRsvp"
-                android:layout_width="fill_parent"
-                android:layout_height="@dimen/badge_item_height"
-                android:layout_alignLeft="@+id/llTime"
-                android:gravity="center_vertical"
-                android:paddingLeft="@dimen/activity_horizontal_margin"
-                android:paddingRight="@dimen/activity_horizontal_margin"
-                android:layout_below="@+id/ivImage" >
-
-                <ImageView
-                    android:id="@+id/ivRsvp"
-                    android:layout_width="@dimen/icon_size"
-                    android:layout_height="@dimen/icon_size"
-                    android:layout_marginRight="5dp"
-                    android:contentDescription="@string/location_icon"
-                    android:src="@drawable/ic_rsvp"
-                    />
-
-                <TextView
-                    android:id="@+id/tvRSVPStatus"
-                    android:layout_width="match_parent"
-                    android:layout_height="@dimen/badge_item_height"
-                    android:layout_below="@+id/ivRsvp"
-                    android:textColor="@color/brown"
-                    android:textSize="20sp"
-                    android:maxLines="1"
-                    android:gravity="center_vertical"
-                    android:text=""
-                    />
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/llDate"
-                android:layout_width="match_parent"
-                android:layout_height="25dp"
-                android:gravity="center_vertical"
-                android:layout_below="@+id/llRsvp"
-                android:paddingLeft="@dimen/activity_horizontal_margin"
-                android:paddingRight="@dimen/activity_horizontal_margin"
-                android:visibility="gone"
-                android:orientation="horizontal" >
-
-                <ImageView
-                    android:id="@+id/ivCalendar"
-                    android:layout_width="@dimen/icon_size"
-                    android:layout_height="@dimen/icon_size"
-                    android:layout_marginRight="5dp"
-                    android:contentDescription="@string/calendar_icon"
-                    android:src="@drawable/ic_calendar" />
-
-                <TextView
-                    android:id="@+id/tvDate"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/date_label" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/llTime"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignLeft="@+id/llDate"
-                android:gravity="center_vertical"
-                android:paddingLeft="@dimen/activity_horizontal_margin"
-                android:paddingRight="@dimen/activity_horizontal_margin"
-                android:visibility="gone"
-                android:layout_below="@+id/llDate" >
-
-                <ImageView
-                    android:id="@+id/ivClock"
-                    android:layout_width="@dimen/icon_size"
-                    android:layout_height="@dimen/icon_size"
-                    android:layout_marginRight="5dp"
-                    android:contentDescription="@string/clock_icon"
-                    android:src="@drawable/ic_clock" />
-
-
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/llLocation"
-                android:layout_width="wrap_content"
-                android:layout_height="@dimen/badge_item_height"
-                android:layout_alignLeft="@+id/llTime"
-                android:gravity="center_vertical"
-                android:paddingLeft="@dimen/activity_horizontal_margin"
-                android:paddingRight="@dimen/activity_horizontal_margin"
-                android:layout_below="@+id/llTime" >
-
-                <ImageView
-                    android:id="@+id/ivLocation"
-                    android:layout_width="@dimen/icon_size"
-                    android:layout_height="@dimen/icon_size"
-                    android:layout_marginRight="5dp"
-                    android:contentDescription="@string/location_icon"
-                    android:src="@drawable/ic_location"
-                    android:onClick="onClickGetThere"
-                    android:clickable="true"
-                    />
-
-                <TextView
-                    android:id="@+id/tvLocation"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/teal"
-                    android:text="@string/location_label"
-                    android:onClick="onClickGetThere"
-                    android:clickable="true"
-                    />
-            </LinearLayout>
-
-            <TextView
-                android:id="@+id/tvEventDescription"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/llLocation"
-                android:layout_marginTop="10dp"
-                android:paddingLeft="@dimen/activity_horizontal_margin"
-                android:paddingRight="@dimen/activity_horizontal_margin"
-                android:text="@string/event_desc_label" />
-
-            <TextView
-                android:id="@+id/tvPeopleTitle"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:text="@string/girls_going_label"
-                android:layout_below="@+id/tvEventDescription"
-                android:visibility="gone"
-                android:textColor="@color/teal" />
-
-            <ListView
-                android:id="@+id/lvGirlsGoing"
-                android:layout_height="0dp"
-                android:visibility="gone"
-                android:layout_weight="1"
-                android:layout_width="match_parent"
-                android:layout_below="@+id/tvPeopleTitle"
-                >
-            </ListView>
-
-
-        </RelativeLayout>
-
-    </ScrollView>
-
-    <ProgressBar
-        android:id="@+id/pbLoading"
-        android:visibility="invisible"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true" />
-
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"></FrameLayout>
 </RelativeLayout>
