--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -46,6 +46,34 @@
         <item name="android:dropDownListViewStyle">@style/DropDownListView.Ctactionbar</item>
     </style>
 
+    <style name="CTDrawerMenu">
+        <item name="android:divider">@android:color/transparent</item>
+        <item name="android:dividerHeight">0dp</item>
+        <item name="android:listSelector">@android:color/transparent</item>
+        <item name="android:cacheColorHint">@android:color/transparent</item>
+    </style>
+
+    <style name="CTDrawerMenuItem">
+        <item name="android:textColor">@drawable/drawer_text_selector</item>
+        <item name="android:gravity">center_vertical</item>
+        <item name="android:paddingRight">20dp</item>
+        <item name="android:paddingLeft">20dp</item>
+        <item name="android:minHeight">66dp</item>
+    </style>
+
+    <style name="CTDrawerMenuItemText">
+        <item name="android:textSize">20sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">@drawable/drawer_text_selector</item>
+        <item name="android:gravity">right|top</item>
+        <item name="android:layout_marginRight">10dp</item>
+    </style>
+
+    <style name="CTDrawerIcon">
+        <item name="android:scaleType">centerInside</item>
+        <item name="android:layout_marginRight">10dp</item>
+    </style>
+
     <style name="InterestTag">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
