--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,14 +11,32 @@
         android:layout_height="match_parent" />
 
     <!-- The navigation drawer -->
-    <ListView android:id="@+id/lvDrawer"
-        android:layout_width="240dp"
-        android:layout_height="match_parent"
+    <RelativeLayout
+        android:layout_width="220dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/rlDrawerContainer"
         android:layout_gravity="start"
-        android:choiceMode="singleChoice"
-        android:divider="@android:color/darker_gray"
-        android:dividerHeight="0dp"
-        android:background="@android:color/background_light"
-        />
+        >
+
+        <ImageView
+            android:layout_width="400dp"
+            android:layout_height="400dp"
+            android:src="@drawable/bg_menu"
+            android:scaleType="fitStart"
+            android:layout_marginLeft="-180dp"
+            android:layout_marginTop="-50dp"/>
+
+        <ListView android:id="@+id/lvDrawer"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:choiceMode="singleChoice"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginTop="10dp"
+            style="@style/CTDrawerMenu"
+            />
+
+    </RelativeLayout>
 
 </org.chicktech.chicktech.utils.FragmentNavigationDrawer>
