--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -12,6 +12,7 @@
         <item name="android:actionModeSplitBackground">@drawable/cab_background_bottom_ctactionbar</item>
         <item name="android:actionModeCloseButtonStyle">@style/ActionButton.CloseMode.Ctactionbar</item>
         <item name="android:actionBarWidgetTheme">@style/Theme.Ctactionbar.Widget</item>
+        <item name="android:actionBarTabTextStyle">@style/CTActionBarTabText</item>
 
         <item name="android:textColor">@color/brown</item>
 
