Styled login screen with custom phone # input interaction.

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -17,4 +17,9 @@
         <item name="android:textColor">@color/brown</item>
 
     </style>
+
+    <style name="CTAppTheme.NoTitleBar">
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowFullscreen">true</item>
+    </style>
 </resources>
