--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -90,4 +90,34 @@
         <item name="android:gravity">center_vertical</item>
     </style>
 
+    <style name="CTLoginContainer">
+        <item name="android:background">@color/pink</item>
+        <item name="android:padding">30dp</item>
+    </style>
+
+    <style name="CTLoginLabel">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">20sp</item>
+        <item name="android:gravity">center_horizontal</item>
+    </style>
+
+    <style name="CTLoginPhoneContainer">
+        <item name="android:gravity">center_horizontal</item>
+    </style>
+
+    <style name="CTLoginPhoneField">
+        <item name="android:textSize">33sp</item>
+        <item name="android:layout_width">20dp</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:background">@drawable/login_textfield_selector</item>
+        <item name="android:singleLine">true</item>
+        <item name="android:inputType">phone</item>
+        <item name="android:gravity">left</item>
+        <item name="android:cursorVisible">false</item>
+    </style>
+
+    <style name="CTLoginPhoneSpacer">
+        <item name="android:layout_width">5dp</item>
+    </style>
+
 </resources>
