--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -120,4 +120,14 @@
         <item name="android:layout_width">5dp</item>
     </style>
 
+    <style name="CTLoginButton" parent="Widget.AppCompat.Light.ActionButton">
+        <item name="android:background">@drawable/btn_inverted_selector</item>
+        <item name="android:textColor">@color/pink</item>
+        <item name="android:paddingTop">5dp</item>
+        <item name="android:paddingBottom">5dp</item>
+        <item name="android:paddingLeft">20dp</item>
+        <item name="android:paddingRight">20dp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
 </resources>
