--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -15,6 +15,7 @@
         <item name="android:actionBarTabTextStyle">@style/CTActionBarTabText</item>
 
         <item name="android:textColor">@color/brown</item>
+        <item name="android:textColorLink">@color/brown</item>
 
     </style>
 
