--- a/app/src/main/res/layout/activity_show_pop_up.xml
+++ b/app/src/main/res/layout/activity_show_pop_up.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/menuEditItemLayout"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
     android:padding="25dp"
+    android:gravity="center_horizontal"
     android:orientation="vertical" >
     <LinearLayout
         android:layout_width="250dp"
@@ -17,6 +18,7 @@
             android:layout_gravity="center"
             android:text="Event Reminder"
             android:textColor="@color/teal"
+            android:layout_marginBottom="20dp"
             android:textSize="25sp" />
     </LinearLayout>
     <RelativeLayout
@@ -41,23 +43,23 @@
             android:background="?android:attr/dividerVertical"
             android:layout_centerHorizontal="true"/>
         <Button
-            android:id="@+id/popOkB"
+            android:id="@+id/popCancelB"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
             android:layout_toLeftOf="@id/ViewColorPickerHelper"
             android:background="?android:attr/selectableItemBackground"
-            android:text="@android:string/ok"
+            android:text="@android:string/cancel"
             android:layout_alignParentBottom="true"/>
         <Button
-            android:id="@+id/popCancelB"
+            android:id="@+id/popOkB"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_alignParentRight="true"
             android:layout_alignParentTop="true"
             android:background="?android:attr/selectableItemBackground"
-            android:text="@android:string/cancel"
+            android:text="@android:string/ok"
             android:layout_alignParentBottom="true"
             android:layout_toRightOf="@id/ViewColorPickerHelper"/>
     </RelativeLayout>
