--- a/app/src/main/res/layout/fragment_edit_profile.xml
+++ b/app/src/main/res/layout/fragment_edit_profile.xml
@@ -94,7 +94,7 @@
                     android:layout_height="30dp"
                     android:id="@+id/imgEmailIcon"
                     android:layout_marginRight="10dp"
-                    android:src="@drawable/ic_email_gray" />
+                    android:src="@drawable/ic_mail" />
 
                 <EditText
                     android:layout_width="match_parent"
@@ -122,7 +122,7 @@
                     android:layout_height="30dp"
                     android:id="@+id/imgPhoneIcon"
                     android:layout_marginRight="10dp"
-                    android:src="@drawable/ic_phone_gray" />
+                    android:src="@drawable/ic_phone" />
 
                 <EditText
                     android:layout_width="match_parent"
@@ -150,7 +150,7 @@
                     android:layout_height="30dp"
                     android:id="@+id/imgAddrIcon"
                     android:layout_marginRight="10dp"
-                    android:src="@drawable/ic_house_gray"
+                    android:src="@drawable/ic_home"
                     android:layout_weight="1"/>
 
                 <LinearLayout
