--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -45,9 +45,7 @@
                 android:layout_toEndOf="@+id/imgPhoto"
                 android:layout_alignParentRight="true"
                 android:layout_marginLeft="30dp"
-                android:textColor="@color/teal"
-                android:textSize="20sp"
-                android:textStyle="bold"
+                style="@style/CTProfileHeading"
                 android:hint="@string/name_hint"
                 android:singleLine="true" />
 
@@ -64,14 +62,14 @@
                 android:layout_toStartOf="@+id/btnEdit" />
 
             <Button
-                android:layout_width="40dp"
-                android:layout_height="40dp"
+                android:layout_width="67dp"
+                android:layout_height="67dp"
                 android:id="@+id/btnEdit"
                 android:layout_alignParentRight="true"
                 android:layout_alignParentEnd="true"
+                android:layout_alignParentTop="true"
                 style="?android:attr/borderlessButtonStyle"
-                android:background="@drawable/ic_edit"
-                android:layout_centerVertical="true" />
+                android:background="@drawable/btn_edit" />
 
         </RelativeLayout>
 
@@ -100,15 +98,14 @@
                     android:layout_height="30dp"
                     android:id="@+id/imgEmailIcon"
                     android:layout_marginRight="10dp"
-                    android:src="@drawable/ic_email_gray"/>
+                    android:src="@drawable/ic_mail"/>
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="@string/email_hint"
                     android:id="@+id/tvEmail"
                     android:layout_gravity="center_vertical"
-                    android:textColor="@color/darkGray"/>
+                    style="@style/CTProfileBody"/>
             </LinearLayout>
             <LinearLayout
                 android:orientation="horizontal"
@@ -127,15 +124,14 @@
                     android:layout_height="30dp"
                     android:id="@+id/imgPhoneIcon"
                     android:layout_marginRight="10dp"
-                    android:src="@drawable/ic_phone_gray"/>
+                    android:src="@drawable/ic_phone"/>
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="@string/phone_number_hint"
                     android:id="@+id/tvPhoneNumber"
                     android:layout_gravity="center_vertical"
-                    android:textColor="@color/darkGray" />
+                    style="@style/CTProfileBody"/>
             </LinearLayout>
 
             <LinearLayout
@@ -147,22 +143,22 @@
                 android:layout_alignParentStart="true"
                 android:layout_marginBottom="10dp"
                 android:layout_alignParentRight="true"
-                android:layout_alignParentEnd="true">
+                android:layout_alignParentEnd="true"
+                android:id="@+id/llAddress">
 
                 <ImageView
                     android:layout_width="30dp"
                     android:layout_height="30dp"
                     android:id="@+id/imgAddrIcon"
                     android:layout_marginRight="10dp"
-                    android:src="@drawable/ic_house_gray"/>
+                    android:src="@drawable/ic_home"/>
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="@string/address_hint"
                     android:id="@+id/tvAddress"
                     android:layout_gravity="center_vertical"
-                    android:textColor="@color/darkGray" />
+                    style="@style/CTProfileBody"/>
             </LinearLayout>
 
         </RelativeLayout>
@@ -181,7 +177,9 @@
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:text="@string/why_chicktech_label"
                 android:id="@+id/tvWhyLabel"
-                android:layout_marginBottom="10dp"/>
+                style="@style/CTProfileHeading"
+                android:layout_marginBottom="20dp"
+                android:layout_marginTop="20dp"/>
 
             <TextView
                 android:layout_width="match_parent"
@@ -203,8 +201,10 @@
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:text="@string/what_technologies_label"
+                style="@style/CTProfileHeading"
                 android:id="@+id/tvWhatLabel"
-                android:layout_marginBottom="10dp"/>
+                android:layout_marginBottom="20dp"
+                android:layout_marginTop="20dp"/>
 
             <com.wefika.flowlayout.FlowLayout
                 android:layout_width="match_parent"
