--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -74,12 +74,17 @@
         <item name="android:layout_marginRight">10dp</item>
     </style>
 
-    <style name="InterestTag">
+    <style name="CTInterestTag">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:background">@color/lightGray</item>
-        <item name="android:padding">10dp</item>
-        <item name="android:layout_marginRight">10dp</item>
+        <item name="android:background">@drawable/bg_interest_tag</item>
+        <item name="android:textColor">@color/brown</item>
+        <item name="android:paddingLeft">15dp</item>
+        <item name="android:paddingRight">15dp</item>
+        <item name="android:paddingTop">5dp</item>
+        <item name="android:paddingBottom">5dp</item>
+        <item name="android:layout_marginRight">5dp</item>
+        <item name="android:layout_marginBottom">5dp</item>
     </style>
 
     <style name="CTActionBarTabText"
@@ -129,6 +134,16 @@
         <item name="android:paddingLeft">20dp</item>
         <item name="android:paddingRight">20dp</item>
         <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="CTProfileHeading">
+        <item name="android:textColor">@color/teal</item>
+        <item name="android:textSize">20sp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="CTProfileBody">
+        <item name="android:textSize">16sp</item>
     </style>
 
 </resources>
