--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -17,6 +17,7 @@
 
         <item name="android:textColor">@color/brown</item>
         <item name="android:textColorLink">@color/brown</item>
+        <item name="android:textSize">16sp</item>
 
     </style>
 
